--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ language: python
 python:
   - '3.4'
 
+before_script:
+  # Credits to ACE3 for these validators
+  - wget https://www.dropbox.com/s/wzj5js0kc2xlanc/sqf_validator.py
+  - wget https://www.dropbox.com/s/jza43yuxswvx2hz/config_style_checker.py
+
 script:
   - python3 tools/sqf_validator.py
   - python3 tools/config_style_checker.py
