--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ python:
 branches:
   only:
     - master
+    
+before_script:
+- if [ -n "${GH_TOKEN}" ] && [ "${TRAVIS_BRANCH}" == "master" ] && [ "${TRAVIS_PULL_REQUEST}" == "false" ]; then
+    pip install pygithub;
+    pip install pygithub3;
+  fi
 
 script:
   - python3 tools/sqf_validator.py
