--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,12 @@ branches:
     - master
     
 before_script:
-- if [ -n "${GH_TOKEN}" ] && [ "${TRAVIS_BRANCH}" == "master" ] && [ "${TRAVIS_PULL_REQUEST}" == "false" ]; then
-    pip install pygithub;
-    pip install pygithub3;
-  fi
+  - pip3 install sqflint
 
 script:
   - python3 tools/sqf_validator.py
   - python3 tools/config_style_checker.py
+  - sqflint -d addons/VANA_LoadoutManagement
 
 notifications:
   email:
