--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,8 @@ before_script:
   - pip3 install sqflint
 
 script:
-  #- python3 tools/sqf_validator.py
-  #- python3 tools/config_style_checker.py
+  - python3 tools/sqf_validator.py
+  - python3 tools/config_style_checker.py
   - sqflint -d addons/VANA_LoadoutManagement
 
 notifications:
